Can now play through day 1 of the game

--- a/create-room.html
+++ b/create-room.html
@@ -60,7 +60,7 @@
                 localStorage.setItem("connectedUserId", userId);
                 localStorage.setItem("connectedRoomName", roomName);
                 localStorage.setItem("connectedUsername", userName);
-                localStorage.setItem("isHost", 1);
+                localStorage.setItem("isHost", "1");
                 localStorage.setItem("readyStatus", "0");
 
                 // Load latest room data and redirect to room lobby
