--- a/story/rooms/developer-hub.html
+++ b/story/rooms/developer-hub.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <button class="back-button" onclick="window.location.href='../situation-room'">← Back to Situation Room</button>
+    <button id="back" class="back-button">← Back to Situation Room</button>
     <!-- Game Info Display -->
     <div id="gameInfo" class="game-info">
         <div id="roomName">Room: Loading...</div>
@@ -27,9 +27,12 @@
            
         </div>
     </div>
+    <div id="loadingContainer" class="loading-container" style="display: none;">
+        <div class="loading-spinner"></div>
+    </div>
 
     <script type="module">
-        import { updatePlayer, listenToRoom, generateActions, updateRoleList } from "/main.js";
+        import { updatePlayer, listenToRoom, generateActions, updateRoleList, navigateToRoom } from "/main.js";
         import TypewriterDialogue from "/typewriter.js";
         import { dialogue } from "/dialogue.js";
         import { roomActions } from "/room-actions.js"
@@ -42,12 +45,17 @@
         const userRole = localStorage.getItem("connectedUserRole");
         let enablerComplete = null;
         let enabledComplete = null;
-        let canDoEnabled = null;
+        let enabledPossible = null;
         let currentDay = 0;
 
         // Local, global, trackers 
         let isInitialLoad = true;
         let currentRoomData = null;
+
+        // Setup back button
+        document.getElementById("back").addEventListener("click", () => {
+            navigateToRoom("Situation Room")
+        });
 
         // Function to update game info
         function updateGameInfo(roomData) {
@@ -63,7 +71,7 @@
                 enabledComplete = roomData["roomPlayers"][localUserId]["enabledComplete"];
 
                 // Can they complete the enabled puzzle yet?
-                canDoEnabled = roomData["roomPlayers"][localUserId]["enabledValue"] != null;
+                enabledPossible = roomData["roomPlayers"][localUserId]["enabledValue"] != null;
                  
                 // Grab current day
                 currentDay = roomData["currentDay"];
@@ -72,34 +80,40 @@
         }
         // 
         function handleDialogue() {
-            // First, see if for this day, this role is supposed to be in this room
-            const dialogueToShow = dialogue?.[currentDay]?.[userRole]?.["developer-hub"] || null;
+            if (isInitialLoad) {
+                // First, see if for this day, this role is supposed to be in this room
+                const dialogueToShow = dialogue?.[currentDay]?.[userRole]?.["developer-hub"] || null;
 
-            // If nothing has been returned, that means the user is in the wrong room
-            if (dialogueToShow === null) {
-                typewriter.showSequence(dialogue["WRONG-ROOM"]);
-                return;
-            }
-            // If the user has an enabler task in here
-            if (dialogueToShow["enabler"]) {
-                    // Has it been completed already?
-                    if (!enablerComplete) {
-                        typewriter.showSequence(dialogueToShow["enabler"]);
-                    }
-                    else {
-                        typewriter.showSequence(dialogueToShow["enabler-complete"]);
-                    }
+                // If nothing has been returned, that means the user is in the wrong room
+                if (dialogueToShow === null) {
+                    typewriter.showSequence(dialogue["WRONG-ROOM"]);
                 }
-            else if (dialogueToShow["enabled"]) {
-                if (canDoEnabled && !enabledComplete){
-                    typewriter.showSequence(dialogueToShow["enabled"])
-                }
-                else if (enabledComplete) {
-                    typewriter.showSequence(dialogueToShow["enabled-complete"])
-                }
+                // Otherwise, show the dialogue
                 else {
-                    typewriter.showSequence(dialogueToShow["enabled-not-available"])
+                    // If the user has an enabler task in here
+                    if (dialogueToShow["enabler"]) {
+                        // Has it been completed already?
+                        if (!enablerComplete) {
+                            typewriter.showSequence(dialogueToShow["enabler"]);
+                        }
+                        else {
+                            typewriter.showSequence(dialogueToShow["enabler-complete"]);
+                        }
+                    }
+                    else if (dialogueToShow["enabled"]) {
+                        if (enabledPossible && !enabledComplete){
+                            typewriter.showSequence(dialogueToShow["enabled"])
+                        }
+                        else if (enabledComplete) {
+                            typewriter.showSequence(dialogueToShow["enabled-complete"])
+                        }
+                        else {
+                            typewriter.showSequence(dialogueToShow["enabled-not-available"])
+                        }
+                    }
                 }
+
+                isInitialLoad = false;
             }
         }
 
