--- a/create-room.html
+++ b/create-room.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Room - Athena</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles/styles.css">
     <link rel="icon" href="data:,">
 </head>
 <body>
@@ -29,7 +29,7 @@
     </div>
 
     <script type="module">
-        import { createRoom, createUser, addUserToRoom, loadRooms } from "./main.js";
+        import { createRoom, createUser, addUserToRoom, loadRooms } from "./src/js/main.js";
 
         document.getElementById("createRoomForm").addEventListener("submit", async function(e) {
             e.preventDefault();
