--- a/story/finalise-roles.html
+++ b/story/finalise-roles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../src/styles/styles.css">
     <link rel="icon" href="data:,">
 </head>
 <body>
@@ -27,8 +27,8 @@
     </div>
 
     <script type="module">
-        import { updatePlayer, listenToRoom, progressDay } from "../main.js";
-        import TypewriterDialogue from "../typewriter.js";
+        import { updatePlayer, listenToRoom, progressDay } from "../src/js/main.js";
+        import TypewriterDialogue from "../src/js/typewriter.js";
 
         // Get room data from localStorage
         const roomId = localStorage.getItem("connectedRoomId");
