--- a/story/rooms/developer-hub.html
+++ b/story/rooms/developer-hub.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../../src/styles/styles.css">
 
 </head>
 <body>
@@ -32,10 +32,10 @@
     </div>
 
     <script type="module">
-        import { updatePlayer, listenToRoom, generateActions, updateRoleList, navigateToRoom } from "/main.js";
-        import TypewriterDialogue from "/typewriter.js";
-        import { dialogue } from "/dialogue.js";
-        import { roomActions } from "/room-actions.js"
+        import { updatePlayer, listenToRoom, generateActions, updateRoleList, navigateToRoom } from "../../src/js/main.js";
+        import TypewriterDialogue from "../../src/js/typewriter.js";
+        import { dialogue } from "../../src/js/dialogue.js";
+        import { roomActions } from "../../src/js/room-actions.js";
 
         // Get room data from localStorage
         const roomId = localStorage.getItem("connectedRoomId");
