--- a/story/rooms/situation-room.html
+++ b/story/rooms/situation-room.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Athena</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../../src/styles/styles.css">
     <link rel="icon" href="data:,">
 </head>
 <body>
@@ -34,10 +34,9 @@
     </div>
 
     <script type="module">
-        import { updatePlayer, listenToRoom, updateRoleList, navigateToRoom, 
-            appendDayScore, incrementEnabledCompletions, progressDay, loadRooms } from "/main.js";
-        import TypewriterDialogue from "/typewriter.js";
-        import { enablerMap } from "/enabler-map.js"
+        import { updatePlayer, listenToRoom, updateRoleList, navigateToRoom, appendDayScore, incrementEnabledCompletions, progressDay, loadRooms } from "../../src/js/main.js";
+        import TypewriterDialogue from "../../src/js/typewriter.js";
+        import { enablerMap } from "../../src/js/enabler-map.js";
 
         // Get room data from localStorage
         const roomId = localStorage.getItem("connectedRoomId");
