--- a/room-lobby.html
+++ b/room-lobby.html
@@ -89,8 +89,8 @@
                     });
 
                     // Check if there's 4 players, and they're all ready
-                    const allReady = playersArray.length >= 1 && 
-                                   playersArray.some(player => player["readyStatus"] === 1);
+                    const allReady = playersArray.length >= 4 && 
+                                   playersArray.every(player => player["readyStatus"] === 1);
                     
                     // If all ready, start the countdown
                     if (allReady && !window.countdownStarted) {
