--- a/story/rooms/research-lab.html
+++ b/story/rooms/research-lab.html
@@ -36,6 +36,7 @@
         import TypewriterDialogue from "../../src/js/typewriter.js";
         import { dialogue } from "../../src/js/dialogue.js";
         import { roomActions } from "../../src/js/room-actions.js";
+        import { setCurrentObjective } from "../../src/js/objectives.js";
 
         // Get room data from localStorage
         const roomId = localStorage.getItem("connectedRoomId");
@@ -125,6 +126,9 @@
                 currentRoomData = roomData;
                 updateGameInfo(roomData);
                 updateRoleList(roomData, document.getElementById("players"));
+                
+                // Set the current objective for this room
+                setCurrentObjective("research-lab", roomData, localStorage.getItem("connectedUserRole"));
                 
                 // Load in actions this role can do during this run
                 generateActions(
