--- a/story/finalise-roles.html
+++ b/story/finalise-roles.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="menu-container">
-        <h1 id="lobbyHeader">Team Assembly Complete</h1>
+        <h1 id="lobbyHeader">Briefing Room</h1>
         <div id="playerList" class="player-list">
             <h3>Team Composition</h3>
             <ul id="players"></ul>
