Polished the role selection, and role finalisation screens, now need to fix up puzzles, and figure out good layout for action rooms

--- a/story/rooms/command-centre.html
+++ b/story/rooms/command-centre.html
@@ -10,7 +10,7 @@
 <body>
     <button id="back" class="back-button">← Back to Situation Room</button>
     <!-- Game Info Display -->
-    <div id="gameInfo" class="game-info">
+    <div id="gameInfo" class="game-info game-panel">
         <div id="roomName">Room: Loading...</div>
         <div id="playerCount">Players: Loading...</div>
         <div id="yourName">You: Loading...</div>
