--- a/story/rooms/developer-hub.html
+++ b/story/rooms/developer-hub.html
@@ -10,7 +10,7 @@
 <body>
     <button id="back" class="back-button">← Back to Situation Room</button>
     <!-- Game Info Display -->
-    <div id="gameInfo" class="game-info">
+    <div id="gameInfo" class="game-info game-panel">
         <div id="roomName">Room: Loading...</div>
         <div id="playerCount">Players: Loading...</div>
         <div id="yourName">You: Loading...</div>
