--- a/story/rooms/situation-room.html
+++ b/story/rooms/situation-room.html
@@ -22,10 +22,10 @@
     <div class="menu-container">
         <h1 id="lobbyHeader">Situation Room</h1>
         <div class="button-container">
-            <button id="serverBtn" class="std-button role-button" style="width: 250px;">Server Room</button>
-            <button id="researchBtn" class="std-button role-button" style="width: 250px;">Research Lab</button>
-            <button id="commandBtn" class="std-button role-button" style="width: 250px;">Command Centre</button>
-            <button id="developerBtn" class="std-button role-button" style="width: 250px;">Developer Hub</button>
+            <button id="serverBtn" class="std-button role-button" style="width: 250px;">Enter<br>Server Room</button>
+            <button id="researchBtn" class="std-button role-button" style="width: 250px;">Enter<br>Research Lab</button>
+            <button id="commandBtn" class="std-button role-button" style="width: 250px;">Enter<br>Command Centre</button>
+            <button id="developerBtn" class="std-button role-button" style="width: 250px;">Enter<br>Developer Hub</button>
         </div>
     </div>
     <div id="loadingContainer" class="loading-container" style="display: none;">
