Ensured that all names are in alphabetical order in the team list, inside the game, also reformatted to remove the You indicator, and give a gap between Team Composition and Players

--- a/story/finalise-roles.html
+++ b/story/finalise-roles.html
@@ -24,6 +24,7 @@
     </div>
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
+        <div id="loadingMessage" class="loading-message">Waiting for host to start the mission...</div>
     </div>
 
     <script type="module">
