--- a/story/role-select.html
+++ b/story/role-select.html
@@ -25,7 +25,7 @@
             <button id="caBtn" class="std-button role-button" style="width: 250px;">Cybersecurity<br>Analyst</button>
         </div>
         <div id="waitingSection" style="display: none;">
-            <div id="rolePlayerList" class="player-list game-style" style="margin-bottom: 24px;">
+            <div id="rolePlayerList" class="player-list game-style">
                 <h3>Team Selection</h3>
                 <ul id="rolePlayers"></ul>
                 <button id="changeMindBtn" class="std-button" style="margin-top: 20px;">Change Your Mind</button>
