--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
+        <div id="loadingMessage" class="loading-message">Loading...</div>
     </div>
     <script type="module">
         import { loadRooms } from "./src/js/main.js";
