--- a/room-lobby.html
+++ b/room-lobby.html
@@ -31,6 +31,7 @@
 
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
+        <div id="loadingMessage" class="loading-message">Loading...</div>
     </div>
 
     <script type="module">
