--- a/story/rooms/developer-hub.html
+++ b/story/rooms/developer-hub.html
@@ -29,6 +29,7 @@
     </div>
     <div id="loadingContainer" class="loading-container" style="display: none;">
         <div class="loading-spinner"></div>
+        <div id="loadingMessage" class="loading-message">Loading...</div>
     </div>
 
     <script type="module">
